fix 🐛: Donut 2nd Payout Overflow Fixed

--- a/src/assets/aniket/responsive.css
+++ b/src/assets/aniket/responsive.css
@@ -55,6 +55,7 @@
     .sub-site-hero .hero-details-wrapper img { transform: translateY(30px); width: 570px; }
 
     .lc-info-block { height: 280px; }
+    .payout-success { inset: auto -30% 10% auto; }
 
 }
 
@@ -113,7 +114,7 @@
     .point-4 { transform: translateY(-5px); }
     .lc-info-block { height: 260px; }
 
-
+    .payout-success { inset: auto -10% 10% auto; }
 }
 
 @media screen and (max-width: 1359px) {
@@ -184,6 +185,8 @@
 
     .circle-badge { position: absolute;  bottom: 180px; left: 30px; }
     .circle-badge > img { width: 100px; height: 100px; }
+
+    .payout-success { inset: auto -15% 10% auto; }
 }   
 
 @media screen and (max-width: 1199px) {
